--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -292,6 +292,7 @@ a {
 
 .btn-default {
     border: 2px solid @primary;
+    border-radius:4px;
     color: @primary;
     background-color: transparent;
     &:hover,
