--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -271,6 +271,7 @@ a:focus {
 }
 .btn-default {
   border: 2px solid #ffffff;
+  border-radius: 4px;
   color: #ffffff;
   background-color: transparent;
 }
